[gd_scene load_steps=2 format=3 uid="uid://d2vxtjr8xhqph"]

[ext_resource type="Script" path="res://scripts/ui/FeedbackMenu.gd" id="1_abcde"]

[node name="FeedbackVBox" type="VBoxContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
script = ExtResource("1_abcde")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Send Feedback"
horizontal_alignment = 1

[node name="TipLabel" type="Label" parent="."]
layout_mode = 2
text = "Share your thoughts, report bugs, or suggest features!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="FeedbackTextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter your feedback here..."
wrap_mode = 1

[node name="CharCountLabel" type="Label" parent="."]
layout_mode = 2
text = "0 / 2000 characters"
horizontal_alignment = 2

[node name="StatusLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Status message"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Back"

[node name="SubmitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Submit"
